# qt_srt_dependencies

./: .gitignore
docs/: ffmpeg_considerations.md  openssl_macos.md  readme.md
qtsrt_dependencies/: CMakeLists.txt  README.md  build_android.sh  test_android.sh
qtsrt_dependencies/cmake/modules/: android-toolchain.cmake  libvpx.cmake  zlib.cmake
qtsrt_dependencies/include/: config.h
qtsrt_dependencies/src/: main.cpp
vcpkg_testing/: .gitignore  scratchpad.md
vcpkg_testing/helloworld/: CMakeLists.txt  CMakeUserPresets.json  vcpkg-configuration.json
vpckg_testing/: .gitignore
